responsive for mobile and added theme click to open and close

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                                 <span><i class="uil uil-home"></i></span>
                                 <h3>Home</h3>
                             </a></abbr>
-                        <abbr title="Explore"> <a class="menu-item">
+                        <!-- <abbr title="Explore"> <a class="menu-item">
                                 <span><i class="uil uil-compass"></i></span>
-                                <h3>Explore</h3>
+                                <h3>Explore</h3> -->
 
                             </a></abbr>
                       <!--- <abbr title="Notifications">--><a class="menu-item" id="notifications">
@@ -125,7 +125,7 @@
                                 <span><i class="uil uil-chart-line"></i></span>
                                 <h3>Recent Post</h3>
                             </a></abbr>
-                        <abbr title="Themes"> <a class="menu-item" <span><i class="uil uil-palette"></i></span>
+                        <abbr title="Themes"><a class="menu-item"  id="theme"> <span><i class="uil uil-palette"></i></span>
                                 <h3>Themes</h3>
                             </a></abbr>
                         <abbr title="Settings"> <a class="menu-item">
@@ -564,8 +564,8 @@
                 <h6>Aa</h6>
             
         <div class="choose-size">
-            <span class="font-size-1 active"></span>
-            <span class="font-size-2"></span>
+            <span class="font-size-1 "></span>
+            <span class="font-size-2 active"></span>
             <span class="font-size-3"></span>
             <span class="font-size-4"></span>
             <span class="font-size-5"></span>
@@ -589,7 +589,7 @@
     </div>
     <!-- ============BACKGROUND COLOR========== -->
     <div class="background">
-        <h4>Backgrond</h4>
+        <h4>Background</h4>
         <div class="choose-bg">
             <div class="bg-1 active">
                 <span></span>
