added font resize option on theme

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 <span><i class="uil uil-chart-line"></i></span>
                                 <h3>Recent Post</h3>
                             </a></abbr>
-                        <abbr title="Themes"><a class="menu-item"  id="theme"> <span><i class="uil uil-palette"></i></span>
+                    <a class="menu-item"  id="theme"> <span><i class="uil uil-palette"></i></span>
                                 <h3>Themes</h3>
                             </a></abbr>
                         <abbr title="Settings"> <a class="menu-item">
