customizing theme bgColor

--- a/index.html
+++ b/index.html
@@ -578,15 +578,15 @@
         <div class="choose-bg">
             <div class="bg-1 active">
                 <span></span>
-                <h5 for="bg-1">Light</h5>
+                <h5 for="bg-1" style="color: black;">Light</h5>
             </div>
             <div class="bg-2">
                 <span></span>
-                <h5 for="bg-2">Dim</h5>
+                <h5 for="bg-2" style="color: white;">Dim</h5>
             </div>
             <div class="bg-3">
                 <span></span>
-                <h5 for="bg-3">No light</h5>
+                <h5 for="bg-3" style="color: white;">No light</h5>
             </div>
         </div>
         </div>
