added some patches

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                 <!-- --------Sidebar----------->
                 <div class="sidebar">
                     <div class="menu" id="here">
-                        <abbr title="Home"><a href="#stories" class="menu-item active">
+                        <a href="#stories" class="menu-item active">
                                 <span><i class="uil uil-home"></i></span>
                                 <h3>Home</h3>
                             </a></abbr>
-                        <!-- <abbr title="Explore"> <a class="menu-item">
+                       <a  href="#stories" class="menu-item">
                                 <span><i class="uil uil-compass"></i></span>
-                                <h3>Explore</h3> -->
+                                <h3>Explore</h3>
 
                             </a></abbr>
                       <!--- <abbr title="Notifications">--><a class="menu-item" id="notifications">
@@ -116,7 +116,7 @@
                             </a>
                         <!-- ============End of Notification Popup========== -->
 
-                         <a class="menu-item" id="messages-notification">
+                         <a  href="#stories" class="menu-item" id="messages-notification">
                                 <span><i class="uil uil-comment-alt-message"><small
                                             class="notification-count">3</small></i></span>
                                 <h3>Messages</h3>
