responsive test for mobile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
     <!-- iconscout cdn -->
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <!-- google icons -->
@@ -61,8 +62,8 @@
                                 <span><i class="uil uil-compass"></i></span>
                                 <h3>Explore</h3>
 
-                            </a></abbr>
-                      <!--- <abbr title="Notifications">--><a class="menu-item" id="notifications">
+                            </a>
+                     <a class="menu-item" id="notifications">
                                 <span><i class="uil uil-bell"><small class="notification-count">9+</small></i></span>
                                 <h3>Notifications</h3>
                                 <!-- ==========NOtification PopUp========= -->
@@ -73,7 +74,8 @@
                                         </div>
                                         <div class="notification-body">
                                             <b>MD Sujon</b><span class="right-now1"> sent you a friend request.</span>
-                                            <h5>right now</h5>
+                                            <h5 class="right-now
+                                            ">right now</h5>
                                         </div>
                                     </div>
                                     <div>
@@ -408,8 +410,8 @@
                             <span class="edit"><i class="uil uil-ellipsis-v"></i></span>
                         </div>
                         <!-- main image -->
-                        <div class="photo">
-                            <img src="images/shojib_day.jpg" alt="Sajjadul Islam Image"  >
+                        <div class="photo ">
+                            <img src="images/shojib_day.jpg" class="shojib" alt="Sajjadul Islam Image" >
                         </div>
                         <div class="action-buttons">
                             <div class="interaction-button">
