--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         </div>
                         <p class="name">Abu Sayed</p>
                     </div>
-                    <div class="story">
+                    <div class="story story-5">
                         <div class="profile-picture">
                             <img src="images/AkonProfile.jpg" alt="">
                         </div>
