--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
     <title>Social Media Demo</title>
 </head>
 
-<body>
+<body onload="preloader()">
+
+    <!-- PRELOADER--------- -->
+    <div class="loader">
+        <div class="spinner"></div>
+    
+       </div>
+    <!-- PRELOADER ENDS------ -->
     <nav>
         <div class="container">
             <!-- <h1 class="logo">Santo</h1> -->
