--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Social Media Demo</title>
 </head>
 
-<body onload="preloader()">
+<body>
 
     <!-- PRELOADER--------- -->
     <div class="loader">
