--- a/index.html
+++ b/index.html
@@ -16,17 +16,6 @@
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/scrollreveal"></script>
-    <!-- <script defer>
-        ScrollReveal({
-            reset: true,
-            distance: '20px',
-            duration: 2500,
-            delay: 400
-        });
-        ScrollReveal().reveal('.feed', { delay: 500 });
-
-    </script> -->
-
     <title>Social Media Demo</title>
 </head>
 
@@ -154,7 +143,7 @@
             </div>
             <!-- ================End Of Left side========= -->
             <!-- --------middle part------- -->
-            <div class="middle">
+            <div class="middle load-hidden">
                 <!-- =================Start Of stories============= -->
                 <div class="stories" id="stories">
                     <div class="story">
@@ -611,14 +600,20 @@
     <script>
         ScrollReveal({
             reset: true,
-            distance: '100px',
-            duration: 500,
-            delay: 200
+            distance: '200px',
+            duration: 300,
+            afterReveal: function(el) {
+        ScrollReveal().clean(el);
+    }
         });
-        ScrollReveal().reveal('.feed', { delay: 280,origin:'left'});
-
+        ScrollReveal().reveal('.feed', { delay: 300, origin: 'left' }); ScrollReveal().reveal('.story', { origin: 'left', interval: 200,afterReveal:false });
+        ScrollReveal().reveal('.menu-item', { origin: 'left', interval: 200, afterReveal: function(el) {
+        ScrollReveal().clean(el);
+    } });
+         ScrollReveal().reveal('.story', { origin: 'left', interval: 200 ,});
+        
     </script>
-  
+
     <script src="script.js"></script>
 </body>
 
